; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_recorder.c_recorder_destroy.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_recorder.c_recorder_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.recorder = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @recorder_destroy(%struct.recorder* %0) #0 {
  %2 = alloca %struct.recorder*, align 8
  store %struct.recorder* %0, %struct.recorder** %2, align 8
  %3 = load %struct.recorder*, %struct.recorder** %2, align 8
  %4 = getelementptr inbounds %struct.recorder, %struct.recorder* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @SDL_DestroyCond(i32 %5)
  %7 = load %struct.recorder*, %struct.recorder** %2, align 8
  %8 = getelementptr inbounds %struct.recorder, %struct.recorder* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @SDL_DestroyMutex(i32 %9)
  %11 = load %struct.recorder*, %struct.recorder** %2, align 8
  %12 = getelementptr inbounds %struct.recorder, %struct.recorder* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @SDL_free(i32 %13)
  ret void
}

declare dso_local i32 @SDL_DestroyCond(i32) #1

declare dso_local i32 @SDL_DestroyMutex(i32) #1

declare dso_local i32 @SDL_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
